syntax = "proto3";

option go_package = ".;proto";

// 生成代码：
// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative favorite.proto
service favorite{
  rpc favorite(FavoriteRequest) returns (FavoriteResponse);
  rpc favored_list(FavoriteListRequest) returns (FavoriteListResponse);
  rpc favorite_list(FavoriteListRequest) returns (FavoriteListResponse);
  rpc favorite_judge(FavoriteJudgeRequest) returns (FavoriteJudgeResponse);
}

message FavoriteRequest {
  int64 user_id = 1; // 用户id
  int64 video_id = 2; // 视频id
  int32 action_type = 3; // 1-点赞，2-取消点赞
}

message FavoriteResponse {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  string status_msg = 2; // 返回状态描述
}

message FavoriteListRequest {
  int64 user_id = 1; // 用户id
}

message FavoriteListResponse {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  string status_msg = 2; // 返回状态描述
  repeated int64 video_list = 3; // 用户点赞视频列表
}

message FavoriteJudgeRequest {
  int64 user_id = 1; // 用户id
  int64 video_id = 2; // 视频id
}

message FavoriteJudgeResponse {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  string status_msg = 2; // 返回状态描述
  int32 is_favorite = 3; // 标志 1-点赞 其他-没点赞
}